--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,25 @@
-# This is a basic workflow to help you get started with Actions
- 
-name:
-  First Cron Job
- 
-  # Controls when the workflow will run
+name: Daily Scheduled Job
+
 on:
-  # Triggers the workflow every 5 minutes
   schedule:
-    - cron: "0/5 * * * *"
- 
-      # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    - cron: "0/5 * * * *" # Runs at 5:00 PM UTC on Monday through Thursday
+
 jobs:
-  # This workflow contains a single job called "cron"
-  cron:
-    # The type of runner that the job will run on
+  run_code:
     runs-on: ubuntu-latest
- 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-      # Runs a single command using the runners shell
-      - name: Run a test math function code
-        run: python test_math.py
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x # Specify your desired Python version
+
+      - name: Download Python Script
+        run: |
+          curl -o my_script.py https://raw.githubusercontent.com/redditisha/scheduler/main/test_math.py
+
+      - name: Run Your Python Script
+        run: python my_script.py
